--- a/style.css
+++ b/style.css
@@ -118,12 +118,13 @@ body {
   top: 1rem;
   visibility: visible;
   opacity: 1;
-  transition: visibility 0.25s, opacity 0.25s;
+  transition: visibility 0.5s, opacity 0.5s;
   z-index: 1000000000;
   
 }
 
 .hide_navigation {
+  position: absolute;
  visibility: hidden;
  opacity: 0;
  
